--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
   overflow-x:hidden;
   color:var(--text);
   line-height:28px;
+  font-size:18px;
   margin:0;
 }
 h1,h2,h3{
@@ -58,8 +59,6 @@ a.more:hover{
 .navigation .options{
   background-color:var(--white);
   position:absolute;
-  /*padding:5px 15px;
-  padding-top:20px;*/
   font-size:15px;
   display:none;
   width:200%;
@@ -76,6 +75,9 @@ a.more:hover{
 .navigation .options a{
   border-bottom:solid 1px black;
   display:block;
+}
+.navigation .options a:first-child{
+  padding-top:30px;
 }
 .navigation span:hover .options{
   display:block;
@@ -99,6 +101,9 @@ a.more:hover{
     border-bottom:none;
     font-size:25px;
     display:block;
+  }
+  .navigation .options a:first-child{
+    padding-top:15px;
   }
   .navigation span{
     display:block;
@@ -201,8 +206,7 @@ a.more:hover{
   font-weight:bold;
 }
 .contact-icon img{
-  border:solid 5px white;
-  border-radius:50%;
+  height:75px;
   width:75px;
 }
 @media only screen and (max-width:1000px){
@@ -325,6 +329,10 @@ a.more:hover{
 }
 .contact-info .icon{
   text-align:right;
+}
+.contact-info .icon img{
+  height:90px;
+  width:90px;
 }
 .contact-info h2{
   margin-bottom:5px;
